implement optimisationResult and add to response for Get and PUT
