# backend/server/controllers/optimisation/optimisation.js
@@ -11,20 +11,24 @@ var sqlFindOffers = db.loadSql(path.join('controllers', 'optimisation', 'findOff
 var sqlCreateOptimisedList = db.loadSql(path.join('controllers', 'optimisation', 'createOptimisedList.sql'));
 var sqlCreateOptimisedItem = db.loadSql(path.join('controllers', 'optimisation', 'createOptimisedItem.sql'));
 var sqlCreateOptimisedListMarket = db.loadSql(path.join('controllers', 'optimisation', 'createOptimisedListMarket.sql'));
+
+var sqlReadOptimisedList = db.loadSql(path.join('controllers', 'optimisation', 'readOptimisedList.sql'));
+var sqlReadOptimisedMarkets = db.loadSql(path.join('controllers', 'optimisation', 'readOptimisedMarkets.sql'));
+
 var sqlUpdateOptimisedItem = db.loadSql(path.join('controllers', 'optimisation', 'updateOptimisedItem.sql'));
 var sqlSaveOptimisation = db.loadSql(path.join('controllers', 'optimisation', 'saveOptimisation.sql'));
 
 //takes the user's selection and persists it to Userdata.OptimisedItem
 function updateItem(req, res, next) {
-  var options = {};
-  options.listid = req.params.listid;
-  options.itemid = req.params.itemid;
-  options.name = req.body.name;
-  options.amount = parseFloat(req.body.amount);
-  options.unit = req.body.unit;
-  options.offerUser = req.body.offerUser;
+  var sqlParams = {};
+  sqlParams.listid = req.params.listid;
+  sqlParams.itemid = req.params.itemid;
+  sqlParams.name = req.body.name;
+  sqlParams.amount = parseFloat(req.body.amount);
+  sqlParams.unit = req.body.unit;
+  sqlParams.offerUser = req.body.offerUser;
 
-  db.conn.none(sqlUpdateOptimisedItem, options)
+  db.conn.none(sqlUpdateOptimisedItem, sqlParams)
     .then(function () {
       res.sendStatus(200);
     })
@@ -36,10 +40,10 @@ function updateItem(req, res, next) {
 
 //takes the values from Userdata.OptimisedItem and updates Userdata.Item
 function saveOptimisedList(req, res, next) {
-  var options = {};
-  options.listid = req.params.listid;
+  var sqlParams = {};
+  sqlParams.listid = req.params.listid;
 
-  db.conn.none(sqlSaveOptimisation, options)
+  db.conn.none(sqlSaveOptimisation, sqlParams)
     .then(function () {
       res.sendStatus(200);
     })
@@ -60,8 +64,9 @@ function getOptimisedList(req, res, next) {
   waterfall([                                      //use waterfall to be able to call error method in an easy way
     async.apply(initializeOptimisedList, options), //async.apply to hand over parameter to first method
     executeOptimisation,
-    createOptimisedData
-  ], function (err, result) {
+    createOptimisedData,
+    getOptimisationResult
+  ], function (err, result, options) {
       if(!err) {
         res.status(200)
         .json(
@@ -76,32 +81,36 @@ function getOptimisedList(req, res, next) {
 
 //load items for given list and suitable offers for each item
 function initializeOptimisedList(options, callback) {
-    db.conn.task(function (t) {
-      return t.map(sqlReadItems, options, function(item) { //load all items for list
-        options.name = item.name;
-        return t.any(sqlFindOffers, options)  //load offers for each item
-          .then(function(offers) {
-            offers = offers.map(
-              function(offer) 
-              {
-                return {
-                  id: offer.id, 
-                  market: offer.market, 
-                  offerprice: offer.offerprice, 
-                  offerfrom: offer.offerfrom, 
-                  offerto: offer.offerto, 
-                  discount: offer.discount, 
-                  isOptimium: false,
-                  article:{
-                    name: offer.articlename, 
-                    brand: offer.articlebrand
-                  }
+  var sqlParams = {};
+  db.conn.task(function (t) {
+    return t.map(sqlReadItems, options, function(item) { //load all items for list
+      sqlParams.name = item.name;
+      sqlParams.userid = options.userid;
+
+      return t.any(sqlFindOffers, sqlParams)  //load offers for each item
+        .then(function(offers) {
+          offers = offers.map(
+            function(offer) 
+            {
+              return {
+                id: offer.id, 
+                market: offer.market, 
+                offerprice: offer.offerprice, 
+                offerfrom: offer.offerfrom, 
+                offerto: offer.offerto, 
+                discount: offer.discount, 
+                isOptimium: false,
+                article:{
+                  name: offer.articlename, 
+                  brand: offer.articlebrand
                 }
               }
-            );
-            item.offers = offers;
-            return item;
-          });
+            }
+          );
+          item.offerAlgorithm = null; //initalize offerAlgorithm to be in place
+          item.offers = offers;
+          return item;
+        });
     }).then(t.batch)
    })
    .then(function (data) {
@@ -112,9 +121,36 @@ function initializeOptimisedList(options, callback) {
     callback(null, result, options);
   })
   .catch(function (err) {
-    err.message = 'controllers.initializeOptimisedList: ' + err.message;
+    err.message = 'controllers.optimise.initializeOptimisedList: ' + err.message;
     callback(err);
   });
+}
+
+function getOptimisationResult(result, options, callback) {
+  var sqlParams = {}
+  sqlParams.optimisedlistid = options.optimisedListId;
+
+  db.conn.oneOrNone(sqlReadOptimisedList, sqlParams)
+    .then(function (olist) {
+      result.optimisationResult = {};
+      result.optimisationResult.savings = olist.savings;
+      result.optimisationResult.distance = olist.distance;
+
+       db.conn.any(sqlReadOptimisedMarkets, sqlParams)
+        .then(function (data) {
+          result.optimisationResult.markets = data;
+          callback(null, result, options);
+        })
+        .catch(function (err) {
+          err.message = 'controllers.optimise.getOptimisationResult.sqlReadOptimisedMarkets: ' + err.message;
+          callback(err);
+      });
+
+    })
+    .catch(function (err) {
+      err.message = 'controllers.optimise.getOptimisationResult.: ' + err.message;
+      callback(err);
+    });
 }
 
 //select the right optimisation-method
@@ -133,6 +169,10 @@ function executeOptimisation(result, options, callback) {
 
 function _optimiseByPrice(result, options, callback) {
   var optimalOffer;
+
+  options.optimisationResult = {};
+  options.optimisationResult.savings = 0;
+
   result.items.forEach(function(item) {
     if(item.offers.length >= 1)
     {
@@ -142,6 +182,7 @@ function _optimiseByPrice(result, options, callback) {
 
       optimalOffer.isOptimium = true;
       item.offerAlgorithm = optimalOffer.id;
+      options.optimisationResult.savings += _getSaving(optimalOffer);
     }
   });
   callback(null, result, options);
@@ -159,14 +200,20 @@ function _parseDiscount(discount)
   }
 }
 
+function _getSaving(offer)
+{
+  return parseFloat(((offer.offerprice / (1 + _parseDiscount(offer.discount)/100)) - offer.offerprice).toFixed(2));
+}
+
+
 function createOptimisedData(result, options, callback) {
    waterfall([
     async.apply(_createOptimisedList, result, options),
     _createOptimisedItems,
     _createOptimisedListMarket
-  ], function (err, result) {
+  ], function (err, result, options) {
       if(!err) {
-        callback(null, result);
+        callback(null, result, options);
       }
       else {
         callback(err);   
@@ -179,15 +226,17 @@ function _createOptimisedList(result, options, callback) {
   sqlParams.id = uuid.v1();
   sqlParams.userid = options.userid;
   sqlParams.listid = options.listid;
+  sqlParams.savings = options.optimisationResult.savings;  //TODOGB
+  sqlParams.distance = 0; //TODOGB
 
-  options.optimisedListId = sqlParams.id;
+  options.optimisedListId = sqlParams.id; //for further opterations
 
   db.conn.none(sqlCreateOptimisedList, sqlParams)  //create db-entry for optimisedList
     .then(function (data) {
       callback(null, result, options);
     })
     .catch(function (err) {
-      err.message = 'controllers._createOptimisedDataList: ' + err.message;
+      err.message = 'controllers.optimise._createOptimisedDataList: ' + err.message;
       callback(err);
     });
 }
@@ -204,7 +253,7 @@ function _createOptimisedItems(result, options, callback) {
       sqlParams.name = item.name;
       sqlParams.amount = item.amount;
       sqlParams.unit = item.unit;
-      sqlParams.offerAlgorithm = null;
+      sqlParams.offerAlgorithm = item.offerAlgorithm;
 
       return t.none(sqlCreateOptimisedItem, sqlParams);
     });
@@ -214,7 +263,7 @@ function _createOptimisedItems(result, options, callback) {
     callback(null, result, options);
   })
   .catch(function (err) {
-    err.message = 'controllers.createOptimisedData._createOptimisedItems: ' + err.message;
+    err.message = 'controllers.optimise._createOptimisedItems: ' + err.message;
     callback(err);
   });
 }
@@ -223,26 +272,23 @@ function _createOptimisedListMarket(result, options, callback) {
   var sqlParams = {}
   sqlParams.optimisedlistid = options.optimisedListId;
 
-  db.conn.task(function (t) {   
-                              //create db-entries for each optimsedItem
+  db.conn.task(function (t) {                            
     var queries = result.items.map(function (item) {
       if(item.offerAlgorithm) {
-        console.log('has offer' + item);
-        sqlParams.offerid = item.offerAlgorithm;
-        return t.none(sqlCreateOptimisedListMarket, sqlParams);
+        sqlParams.offerid = item.offerAlgorithm;s
+        return t.none(sqlCreateOptimisedListMarket, sqlParams); //create db-entries for each optimisedListMarket    
       }
       else {
-        console.log('has no offer' + item);
         return null;
       }
     });
     return t.batch(queries);
   })
   .then(function (data) {          
-    callback(null, result);
+    callback(null, result, options);
   })
   .catch(function (err) {
-    err.message = 'controllers.createOptimisedData._createOptimisedListMarket: ' + err.message;
+    err.message = 'controllers.optimise._createOptimisedListMarket: ' + err.message;
     callback(err);
   });
 }
